--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "employee-management",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mohit27kokanda.github.io/employee-mangement",
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
@@ -26,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -49,6 +52,7 @@
   "devDependencies": {
     "@testing-library/react": "^16.0.1",
     "autoprefixer": "^10.4.20",
+    "gh-pages": "^6.1.1",
     "jest": "^27.5.1",
     "miragejs": "^0.2.0-alpha.3",
     "postcss": "^8.4.45",
